// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DarkMode /> Render component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none transparent;
  border: none;
  bottom: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: inline-block;
  font-size: 16px;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 40px;
  padding: 0;
  position: fixed;
  right: 40px;
  width: 40px;
}

<body>
    <div>
      <button
        class="c0"
      >
        <svg
          fill="none"
          height="36"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
            fill="#EABF57"
          />
          <path
            d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
            fill="#EABF57"
          />
          <path
            d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
            fill="#EABF57"
          />
          <path
            d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
            fill="#EABF57"
          />
          <path
            d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
            fill="#EABF57"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="DarkModestyles__DarkMode-sc-12towz7-0 kLOegO"
    >
      <svg
        fill="none"
        height="36"
        width="36"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
          fill="#EABF57"
        />
        <path
          d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
          fill="#EABF57"
        />
        <path
          d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
          fill="#EABF57"
        />
        <path
          d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
          fill="#EABF57"
        />
        <path
          d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
          fill="#EABF57"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DarkMode /> Render component with darkModeActive prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none transparent;
  border: none;
  bottom: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: inline-block;
  font-size: 16px;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 40px;
  padding: 0;
  position: fixed;
  right: 40px;
  width: 40px;
}

<div>
      <button
        class="c0"
      >
        <svg
          fill="none"
          height="36"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M31.113 19.567c-1.016.27-2.064.407-3.115.407-3.203 0-6.21-1.245-8.47-3.504a12.038 12.038 0 01-3.095-11.584 1.5 1.5 0 00-1.838-1.835 15.02 15.02 0 00-6.733 3.873c-5.847 5.847-5.847 15.364 0 21.215a14.904 14.904 0 0010.608 4.394 14.893 14.893 0 0010.605-4.393 15.011 15.011 0 003.874-6.736 1.502 1.502 0 00-1.836-1.837zm-4.158 6.452a11.92 11.92 0 01-8.484 3.515 11.93 11.93 0 01-8.487-3.517c-4.677-4.678-4.677-12.292 0-16.97a11.884 11.884 0 013.09-2.225 15.04 15.04 0 004.335 11.772 14.956 14.956 0 0011.772 4.336 12.055 12.055 0 01-2.226 3.089z"
            fill="#272643"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="DarkModestyles__DarkMode-sc-12towz7-0 kLOegO"
    >
      <svg
        fill="none"
        height="36"
        width="36"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M31.113 19.567c-1.016.27-2.064.407-3.115.407-3.203 0-6.21-1.245-8.47-3.504a12.038 12.038 0 01-3.095-11.584 1.5 1.5 0 00-1.838-1.835 15.02 15.02 0 00-6.733 3.873c-5.847 5.847-5.847 15.364 0 21.215a14.904 14.904 0 0010.608 4.394 14.893 14.893 0 0010.605-4.393 15.011 15.011 0 003.874-6.736 1.502 1.502 0 00-1.836-1.837zm-4.158 6.452a11.92 11.92 0 01-8.484 3.515 11.93 11.93 0 01-8.487-3.517c-4.677-4.678-4.677-12.292 0-16.97a11.884 11.884 0 013.09-2.225 15.04 15.04 0 004.335 11.772 14.956 14.956 0 0011.772 4.336 12.055 12.055 0 01-2.226 3.089z"
          fill="#272643"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DarkMode /> Render component with switchToDarkMode prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none transparent;
  border: none;
  bottom: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: inline-block;
  font-size: 16px;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 40px;
  padding: 0;
  position: fixed;
  right: 40px;
  width: 40px;
}

<div>
      <button
        class="c0"
      >
        <svg
          fill="none"
          height="36"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
            fill="#EABF57"
          />
          <path
            d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
            fill="#EABF57"
          />
          <path
            d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
            fill="#EABF57"
          />
          <path
            d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
            fill="#EABF57"
          />
          <path
            d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
            fill="#EABF57"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="DarkModestyles__DarkMode-sc-12towz7-0 kLOegO"
    >
      <svg
        fill="none"
        height="36"
        width="36"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
          fill="#EABF57"
        />
        <path
          d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
          fill="#EABF57"
        />
        <path
          d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
          fill="#EABF57"
        />
        <path
          d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
          fill="#EABF57"
        />
        <path
          d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
          fill="#EABF57"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`<DarkMode /> Render component with switchToLightMode prop 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    .c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: none transparent;
  border: none;
  bottom: 40px;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: inline-block;
  font-size: 16px;
  height: 40px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 40px;
  padding: 0;
  position: fixed;
  right: 40px;
  width: 40px;
}

<div>
      <button
        class="c0"
      >
        <svg
          fill="none"
          height="36"
          width="36"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
            fill="#EABF57"
          />
          <path
            d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
            fill="#EABF57"
          />
          <path
            d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
            fill="#EABF57"
          />
          <path
            d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
            fill="#EABF57"
          />
          <path
            d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
            fill="#EABF57"
          />
        </svg>
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="DarkModestyles__DarkMode-sc-12towz7-0 kLOegO"
    >
      <svg
        fill="none"
        height="36"
        width="36"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10.4894 18C10.4894 22.1415 13.8584 25.5105 17.9999 25.5105C22.1414 25.5105 25.5104 22.1415 25.5104 18C25.5104 13.8585 22.1414 10.4895 17.9999 10.4895C13.8584 10.4895 10.4894 13.8585 10.4894 18ZM17.9999 13.4895C20.4869 13.4895 22.5104 15.513 22.5104 18C22.5104 20.487 20.4869 22.5105 17.9999 22.5105C15.5129 22.5105 13.4894 20.487 13.4894 18C13.4894 15.513 15.5129 13.4895 17.9999 13.4895ZM16.4969 28.5H19.4969V33H16.4969V28.5ZM16.4969 3H19.4969V7.5H16.4969V3ZM2.99695 16.5H7.49695V19.5H2.99695V16.5ZM28.4969 16.5H32.9969V19.5H28.4969V16.5Z"
          fill="#EABF57"
        />
        <path
          d="M6.32849 27.5445L9.50849 24.3615L11.631 26.4825L8.45099 29.6655L6.32849 27.5445Z"
          fill="#EABF57"
        />
        <path
          d="M24.36 9.51601L27.543 6.33301L29.664 8.45401L26.481 11.637L24.36 9.51601Z"
          fill="#EABF57"
        />
        <path
          d="M9.51296 11.6385L6.32996 8.45547L8.45246 6.33447L11.6325 9.51747L9.51296 11.6385Z"
          fill="#EABF57"
        />
        <path
          d="M29.664 27.546L27.543 29.667L24.36 26.484L26.481 24.363L29.664 27.546Z"
          fill="#EABF57"
        />
      </svg>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
